Incorrect scrollable height during simplified layout https://bugs.webkit.org/show_bug.cgi?id=107193

Reviewed by Ojan Vafai.

Source/WebCore:

Test: fast/overflow/height-during-simplified-layout.html

When computing overflow, we use the height of the block before it was clamped
(i.e., before updateLogicalHeight() has been called).

During simplfied layout, we use the previous sizes rather than doing a full
layout. We still compute overflow, but we were using the clamped height rather
than the full height.

This caused us to incorrectly compute the overflow by the vertical padding.
Since we were passing in the already clamped clientHeight to RenderBlock::computeOverflow,
we would only include the overflow from our children sizes and not include the overflow
from ourselves caused by padding + content.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::simplifiedLayout): Use the scrollable height rather than the
already clamped height.

LayoutTests:

* fast/overflow/height-during-simplified-layout-expected.txt: Added.
* fast/overflow/height-during-simplified-layout.html: Added.


Canonical link: https://commits.webkit.org/125532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140171 268f45cc-cd09-0410-ab3c-d52691b4dbfc